--- a/dom/tests/mochitest/localstorage/test_brokenUTF-16.html
+++ b/dom/tests/mochitest/localstorage/test_brokenUTF-16.html
@@ -42,26 +42,16 @@ function startTest()
   localStorage.setItem(k, v);
   is(localStorage.getItem(k), v, "broken value results from getItem");
 
-  try {
-    localStorage.setItem(v, "a value");
-    ok(false, "Exception for localStorage.setItem, illegal key");
-  }
-  catch (ex) {
-    is(ex.name, "NS_ERROR_ILLEGAL_VALUE", "Exception for localStorage.setItem, illegal key");
-  }
+  localStorage.setItem(v, "a value");
+  is(localStorage.getItem(v), "a value", "value result using broken key from getItem");
 
   localStorage.clear();
 
   localStorage[k] = v;
   is(localStorage[k], v, "broken value results from []");
 
-  try {
-    localStorage[v] = "a value";
-    ok(false, "Exception for localStorage.setItem, illegal key");
-  }
-  catch (ex) {
-    is(ex.name, "NS_ERROR_ILLEGAL_VALUE", "Exception for localStorage.setItem, illegal key");
-  }
+  localStorage[v] = "a value";
+  is(localStorage[v], "a value", "value result using broken key from []");
 
   localStorage.clear();
 
