--- a/dom/permission/tests/test_permissions_api.html
+++ b/dom/permission/tests/test_permissions_api.html
@@ -47,23 +47,25 @@
   ];
 
   // Create a closure, so that tests are run on the correct window object.
-  function createPermissionTester(iframe) {
-    const iframeWindow = iframe.contentWindow;
+  function createPermissionTester(aWindow) {
     return {
-      async setPermissions(allow, context = iframeWindow.document) {
+      setPermissions(allow) {
         const permissions = PERMISSIONS.map(({ type }) => {
           return {
             type,
             allow,
-            context,
+            'context': aWindow.document
           };
         });
-        await SpecialPowers.popPermissions();
-        return SpecialPowers.pushPermissions(permissions);
+        return new Promise((resolve) => {
+          SpecialPowers.popPermissions(() => {
+            SpecialPowers.pushPermissions(permissions, resolve);
+          });
+        });
       },
       revokePermissions() {
         const promisesToRevoke = PERMISSIONS.map(({ name })  => {
-          return iframeWindow.navigator.permissions
+          return aWindow.navigator.permissions
             .revoke({ name })
             .then(
               ({ state }) => is(state, 'prompt', `correct state for '${name}'`),
@@ -74,7 +76,7 @@
       },
       revokeUnsupportedPermissions() {
         const promisesToRevoke = UNSUPPORTED_PERMISSIONS.map(({ name }) => {
-          return iframeWindow.navigator.permissions
+          return aWindow.navigator.permissions
             .revoke({ name })
             .then(
               () => ok(false, `revoke should not have resolved for '${name}'`),
@@ -99,7 +101,7 @@
       },
       checkUnsupportedPermissions() {
         const promisesToQuery = UNSUPPORTED_PERMISSIONS.map(({ name }) => {
-          return iframeWindow.navigator.permissions
+          return aWindow.navigator.permissions
             .query({ name })
             .then(
               () => ok(false, `query should not have resolved for '${name}'`),
@@ -112,7 +114,7 @@
         return Promise.all(promisesToQuery);
       },
       promiseStateChanged(name, state) {
-        return iframeWindow.navigator.permissions
+        return aWindow.navigator.permissions
           .query({ name })
           .then(status => {
             return new Promise( resolve => {
@@ -140,7 +142,7 @@
         });
       },
       testInvalidQuery() {
-        return iframeWindow.navigator.permissions
+        return aWindow.navigator.permissions
           .query({ name: 'invalid' })
           .then(
             () => ok(false, 'invalid query should not have resolved'),
@@ -148,96 +150,12 @@
           );
       },
       testInvalidRevoke() {
-        return iframeWindow.navigator.permissions
+        return aWindow.navigator.permissions
           .revoke({ name: 'invalid' })
           .then(
             () => ok(false, 'invalid revoke should not have resolved'),
             () => ok(true, 'invalid revoke should have rejected')
           );
-      },
-      async testNotFullyActiveDoc() {
-        const iframe1 = await createIframe();
-        const expectedErrorClass = iframe1.contentWindow.DOMException;
-        const permAPI = iframe1.contentWindow.navigator.permissions;
-        // Document no longer fully active
-        iframe1.remove();
-        await new Promise((res) => {
-          permAPI.query({ name: "geolocation" }).catch((error) => {
-            ok(
-              error instanceof expectedErrorClass,
-              "DOMException from other realm"
-            );
-            is(
-              error.name,
-              "InvalidStateError",
-              "Must reject with a InvalidStateError"
-            );
-            iframe1.remove();
-            res();
-          });
-        });
-      },
-      async testNotFullyActiveChange() {
-        await SpecialPowers.popPermissions();
-        const iframe2 = await createIframe();
-        const initialStatus = await iframe2.contentWindow.navigator.permissions.query(
-          { name: "geolocation" }
-        );
-        await SpecialPowers.pushPermissions([
-          {
-            type: "geo",
-            allow: PROMPT_ACTION,
-            context: iframe2.contentWindow.document,
-          },
-        ]);
-        is(
-          initialStatus.state,
-          "prompt",
-          "Initially the iframe's permission is prompt"
-        );
-
-        // Document no longer fully active
-        const stolenDoc = iframe2.contentWindow.document;
-        iframe2.remove();
-        initialStatus.onchange = () => {
-          ok(false, "onchange must not fire when document is not fully active.");
-        };
-        // We set it to grant for this origin, but the PermissionStatus doesn't change.
-        await SpecialPowers.pushPermissions([
-          {
-            type: "geo",
-            allow: ALLOW_ACTION,
-            context: stolenDoc,
-          },
-        ]);
-        is(
-          initialStatus.state,
-          "prompt",
-          "Inactive document's permission must not change"
-        );
-
-        // Re-attach the iframe
-        document.body.appendChild(iframe2);
-        await new Promise((res) => (iframe2.onload = res));
-        // Fully active again
-        const newStatus = await iframe2.contentWindow.navigator.permissions.query({
-          name: "geolocation",
-        });
-        is(newStatus.state, "granted", "Reflect that we are granted");
-
-        const newEventPromise = new Promise((res) => (newStatus.onchange = res));
-        await SpecialPowers.pushPermissions([
-          {
-            type: "geo",
-            allow: DENY_ACTION,
-            context: iframe2.contentWindow.document,
-          },
-        ]);
-        // Event fires...
-        await newEventPromise;
-        is(initialStatus.state, "prompt", "Remains prompt, as it's actually dead.");
-        is(newStatus.state, "denied", "New status must be 'denied'.");
-        iframe2.remove();
       },
     };
   }
@@ -255,7 +173,7 @@
     return new Promise((resolve) => {
       const iframe = document.createElement('iframe');
       iframe.src = 'file_empty.html';
-      iframe.onload = () => resolve(iframe);
+      iframe.onload = () => resolve(iframe.contentWindow);
       document.body.appendChild(iframe);
     });
   }
@@ -280,9 +198,7 @@
           .then(() => tester.revokeUnsupportedPermissions())
           .then(() => tester.revokePermissions())
           .then(() => tester.checkPermissions('prompt'))
-          .then(() => tester.testInvalidRevoke())
-          .then(() => tester.testNotFullyActiveDoc())
-          .then(() => tester.testNotFullyActiveChange());
+          .then(() => tester.testInvalidRevoke());
       })
       .then(SimpleTest.finish)
       .catch((e) => {
