--- a/devtools/client/debugger/test/mochitest/examples/doc-gc-sources.html
+++ b/devtools/client/debugger/test/mochitest/examples/doc-gc-sources.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
-
+<!-- Note: This file contains \r\n newlines, so be careful to preserve them when editing. -->
 <div>
   Here
   is
