--- a/testing/web-platform/tests/css/css-grid/masonry/tentative/masonry-align-tracks-multi-001.html
+++ b/testing/web-platform/tests/css/css-grid/masonry/tentative/masonry-align-tracks-multi-001.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-
-
-
-
+<!--
+     Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <html><head>
   <meta charset="utf-8">
   <title>CSS Grid Test: Masonry layout with multiple `align-tracks` values</title>
@@ -11,7 +11,7 @@
   <link rel="match" href="masonry-align-tracks-multi-001-ref.html">
 <style>
 html,body {
-  color:black; background-color:white; font:15px/1 monospace; padding:0; margin:0;
+  color:black; background-color:white; font:15px/1 "Courier New", monospace; padding:0; margin:0;
 }
 grid {
   display: inline-grid;
