--- a/testing/web-platform/tests/css/css-grid/masonry/tentative/masonry-gap-001-ref.html
+++ b/testing/web-platform/tests/css/css-grid/masonry/tentative/masonry-gap-001-ref.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
-
-
-
-
+<!--
+     Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <html><head>
   <meta charset="utf-8">
   <title>Reference: Masonry layout with definite `gap` in both axes</title>
   <link rel="author" title="Mats Palmgren" href="mailto:mats@mozilla.com">
   <style>
 html,body {
-  color:black; background-color:white; font:25px/1 monospace; padding:0; margin:0;
+  color:black; background-color:white; font:25px/1 "Courier New", monospace; padding:0; margin:0;
 }
 
 grid {
