--- a/browser/base/content/spotlight.html
+++ b/browser/base/content/spotlight.html
@@ -9,6 +9,7 @@
   <meta http-equiv="Content-Security-Policy" content="default-src resource: chrome:; img-src https://www.mozilla.org blob:; object-src 'none'">
   <meta name="referrer" content="no-referrer">
   <link rel="stylesheet" type="text/css" href="chrome://global/skin/in-content/common.css">
+  <link rel="stylesheet" type="text/css" href="chrome://browser/skin/spotlight.css">
   <link rel="localization" href="branding/brand.ftl">
   <link rel="localization" href="browser/branding/brandings.ftl">
   <link rel="localization" href="browser/newtab/asrouter.ftl">
