--- a/dom/midi/tests/test_midi_permission_gated.html
+++ b/dom/midi/tests/test_midi_permission_gated.html
@@ -6,12 +6,24 @@
   </head>
 
   <body onload="runTests()">
-    <iframe id="ifr"></iframe>
+    <iframe id="subdomain"></iframe>
+    <iframe id="localhost"></iframe>
     <script class="testbody" type="application/javascript">
     SimpleTest.waitForExplicitFinish();
+    const filePath = "/tests/dom/midi/tests/file_midi_permission_gated.html";
     // Generally this runs on example.com but with --enable-xorigin-tests it runs
     // on example.org.
-    $("ifr").src = "https://test1." + location.host + "/tests/dom/midi/tests/file_empty.html";
+    let subdomainURL = "https://test1." + location.host + filePath;
+    $("subdomain").src = subdomainURL;
+    // For some reason the mochitest server returns "Bad request" with localhost,
+    // but permits the loopback address. That's good enough for testing purposes.
+    $("localhost").src = "http://127.0.0.1:8888" + filePath;
+
+    function waitForMessage() {
+      return new Promise((resolve) => {
+        window.addEventListener("message", (e) => resolve(e.data), {once: true});
+      });
+    }
 
     async function runTests() {
       await SpecialPowers.pushPrefEnv({
@@ -29,9 +41,9 @@
         await SpecialPowers.testPermission(
           "midi-sysex",
           SpecialPowers.Services.perms.UNKNOWN_ACTION,
-          SpecialPowers.wrap($("ifr")).contentDocument
+          subdomainURL
         ),
-        "permission should also not be set for iframe"
+        "permission should also not be set for subdomain"
       );
 
       // Gated permission should fail without addon installed.
@@ -42,6 +54,19 @@
         } catch (ex) {
           ok(true, "MIDI Access Request denied by default");
         }
+      }
+
+      // Gated permission should prompt for localhost.
+      //
+      // Note: We don't appear to have good test machinery anymore for
+      // navigating prompts from a plain mochitest. If you uncomment the lines
+      // below and run the test interactively, it should pass. Given that this
+      // is a niche feature that's unlikely to break, it doesn't seem worth
+      // investing in complicated test infrastructure to check it in automation.
+      for (let sysex of [false, true]) {
+        // $("localhost").contentWindow.postMessage(sysex, "*");
+        // let response = await waitForMessage();
+        // is(response, "succeeded", "MIDI Access Request allowed for localhost");
       }
 
       // When an addon is installed, the permission is inserted.  Test
@@ -64,12 +89,9 @@
 
       // Gated permission should also apply to subdomains.
       for (let sysex of [false, true]) {
-        try {
-          await SpecialPowers.wrap($("ifr")).contentWindow.navigator.requestMIDIAccess({ sysex });
-          ok(true, "MIDI Access Request allowed for subdomain");
-        } catch (ex) {
-          ok(false, "MIDI Access Request failed for subdomain");
-        }
+        $("subdomain").contentWindow.postMessage(sysex, "*");
+        let response = await waitForMessage();
+        is(response, "succeeded", "MIDI Access Request allowed for subdomain");
       }
 
       // Remove the permission.
