--- a/testing/web-platform/tests/content-security-policy/child-src/child-src-cross-origin-load.sub.html
+++ b/testing/web-platform/tests/content-security-policy/child-src/child-src-cross-origin-load.sub.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    
+    <!-- Programmatically converted from a WebKit Reftest, please forgive resulting idiosyncracies.-->
     <meta http-equiv="Content-Security-Policy" content="child-src 'self' http://www1.{{host}}:{{ports[http][0]}}; script-src 'self' 'unsafe-inline'; connect-src 'self';">
     <title>child-src-cross-origin-load</title>
     <script src="/resources/testharness.js"></script>
@@ -42,9 +42,9 @@
         }
 
     </script>
-    
-
-
+    <!-- enforcing policy:
+child-src 'self' http://www1.{{host}}:{{ports[http][0]}}; script-src 'self' 'unsafe-inline'; connect-src 'self';
+-->
     <p>
         IFrames blocked by CSP should generate a 'load', not 'error' event, regardless of blocked state. This means they appear to be normal cross-origin loads, thereby not leaking URL information directly to JS.
     </p>
@@ -55,8 +55,6 @@
         function loadEvent() {
             loads++;
             log("PASS " + "IFrame #" + loads + " generated a load event.");
-            if (loads == 3)
-                log("TEST COMPLETE");
         }
 
     </script>
