--- a/dom/base/test/test_script_loader_js_cache.html
+++ b/dom/base/test/test_script_loader_js_cache.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-
-
-
-
-
-
-
+<!-- https://bugzilla.mozilla.org/show_bug.cgi?id=900784 -->
+<!-- The JS bytecode cache is not supposed to be observable. To make it
+     observable, the ScriptLoader is instrumented to trigger events on the
+     script tag. These events are followed to reconstruct the code path taken by
+     the script loader and associate a simple name which is checked in these
+     test cases.
+-->
 <head>
   <meta charset="utf-8">
   <title>Test for saving and loading bytecode in/from the necko cache</title>
@@ -26,6 +26,10 @@
           "scriptloader_no_encode": "source_exec"
         },
         "scriptloader_evaluate_module": {
+          "scriptloader_encode": {
+            "scriptloader_bytecode_saved": "bytecode_saved",
+            "scriptloader_bytecode_failed": "bytecode_failed"
+          },
           "scriptloader_no_encode": "source_exec"
         },
       },
@@ -162,7 +166,7 @@
       // Load a page that uses the same script as a module and verify that we
       // re-parse it from source.
       stateMachineResult = WaitForScriptTagEvent("file_js_cache_module.html");
-      assert_equals(await stateMachineResult, "source_exec",
+      assert_equals(await stateMachineResult, "bytecode_saved",
                     "[6] ScriptLoadRequest status for a module");
     }, "Check the JS bytecode cache");
 
