--- a/devtools/client/debugger/test/mochitest/examples/doc-asm.html
+++ b/devtools/client/debugger/test/mochitest/examples/doc-asm.html
@@ -1,6 +1,6 @@
- 
-
-
+ <!-- This Source Code Form is subject to the terms of the Mozilla Public
+    - License, v. 2.0. If a copy of the MPL was not distributed with this
+    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,7 +11,6 @@
     function runAsm() {
       console.log(asmjs.f());
     }
-    debugger; // see browser_dbg-asm.js reload() comment
     </script>
   </head>
 
