--- a/testing/web-platform/tests/css/css-grid/subgrid/line-names-005.html
+++ b/testing/web-platform/tests/css/css-grid/subgrid/line-names-005.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-
-
-
-
+<!--
+     Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <html><head>
   <meta charset="utf-8">
   <title>CSS Grid Test: subgrid line name resolution</title>
@@ -143,7 +143,7 @@ x {
 </div>
 
 <div style='display:grid; grid-template-areas: ". . . . . . a a a a"'>
-<div style='display:grid; grid-template-areas: ". . . . . . . a a a"; grid-template-columns:subgrid; grid-column:span 10;'>
+<div style='display:grid; grid-template-areas: ". . . . . . . a a ."; grid-template-columns:subgrid; grid-column:span 10;'>
 <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
   <div style="display:grid; grid:auto/subgrid; grid-column: 6 / span 5; grid-row:2">
     <x style="grid-column: a">x</x>
