--- a/testing/web-platform/tests/css/css-grid/subgrid/line-names-008.html
+++ b/testing/web-platform/tests/css/css-grid/subgrid/line-names-008.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-
-
-
-
+<!--
+     Any copyright is dedicated to the Public Domain.
+     http://creativecommons.org/publicdomain/zero/1.0/
+-->
 <html><head>
   <meta charset="utf-8">
   <title>CSS Grid Test: line name resolution for grid-aligned abs.pos. inside subgrid CB</title>
@@ -146,14 +146,14 @@ x {
   </div>
 </div>
 
-<div class="grid" style="grid-template-columns: repeat(3,30px) [a] 30px repeat(7,30px)">
+<div class="grid" style="grid-template-columns: 30px [a] repeat(2,30px) [a] 30px repeat(7,30px)">
 <n></n><n></n><n></n><n></n><n></n><n></n><n></n><n></n><n></n><n></n>
   <div class="hr" style="grid-template-columns: subgrid [] [] [] [] [a]; grid-column:2/span 6">
     <x style="grid-column: a/span a">x</x>
   </div>
 </div>
 
-<div class="grid" style="grid-template-columns: repeat(3,30px) [a] 30px repeat(7,30px)">
+<div class="grid" style="grid-template-columns: 30px [a] repeat(2,30px) [a] 30px repeat(7,30px)">
 <n></n><n></n><n></n><n></n><n></n><n></n><n></n><n></n><n></n><n></n>
   <div class="hr" style="grid-template-columns: subgrid [] [] [] [] [a]; grid-column:2/span 6">
     <x style="grid-column: a/a 2">x</x>
