--- a/testing/web-platform/tests/content-security-policy/style-src/injected-inline-style-blocked.sub.html
+++ b/testing/web-platform/tests/content-security-policy/style-src/injected-inline-style-blocked.sub.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-    
+    <!-- Programmatically converted from a WebKit Reftest, please forgive resulting idiosyncracies.-->
     <meta http-equiv="Content-Security-Policy" content="style-src 'none'; script-src 'self' 'unsafe-inline'; connect-src 'self';">
     <title>injected-inline-style-blocked</title>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <script src='../support/logTest.sub.js?logs=["violated-directive=style-src-elem","PASS"]'></script>
+    <script src='../support/logTest.sub.js?logs=["violated-directive=style-src-elem","violated-directive=style-src-elem","PASS"]'></script>
     <script src="../support/alertAssert.sub.js?alerts=[]"></script>
 </head>
 
