--- a/editor/spellchecker/tests/test_bug1219928.html
+++ b/editor/spellchecker/tests/test_bug1219928.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=1219928
+-->
 <head>
   <title>Test for Bug 1219928</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -29,14 +29,14 @@ var spellchecker;
 
 SimpleTest.waitForExplicitFinish();
 SimpleTest.waitForFocus(function() {
-  var onSpellCheck =
+  var maybeOnSpellCheck =
     SpecialPowers.Cu.import(
-      "resource://testing-common/AsyncSpellCheckTestHelper.jsm", null).onSpellCheck;
+      "resource://testing-common/AsyncSpellCheckTestHelper.jsm", {}).maybeOnSpellCheck;
 
   var elem = document.getElementById("en-US");
   elem.focus();
 
-  onSpellCheck(elem, function() {
+  maybeOnSpellCheck(elem, function() {
     var editingSession = SpecialPowers.wrap(window).docShell.editingSession;
     var editor = editingSession.getEditorForWindow(window);
     var selcon = editor.selectionController;
